<resources>
    <string name="app_name">DnD Character Sheet Manager</string>
    <string name="character_name">Character Name</string>
    <string name="character_race">Character Race</string>
    <string name="character_class_level">Character Class plus Level</string>
    <string name="stats_button">Stats</string>
    <string name="items_button">Items</string>
    <string name="attacks_button">Attacks</string>
    <string name="spells_button">Spells</string>
    <string name="current_hp_text">  </string>
    <string name="maximum_hp"> </string>
    <string name="no_characters_yet">You haven\'t created any characters yet. Make some by pressing the + button</string>
    <string name="choose_character_class">Choose your character\'s class:</string>
    <string name="choose_character_race">Choose your character\'s race:</string>
    <string name="fill_in_stats">Fill in your character\'s stats:</string>
    <string name="error_level_text">Should be between 1 and 20</string>
    <string name="error_ac_text">Should be between 5 and 50</string>
    <string name="error_stat_text">Should be between 1 and 30</string>
    <string name="name_input_text">What is your character\'s name?</string>
    <string name="name_edit_text_autofill">Input character name…</string>
    <string name="error_name_text">Should be between 1 and 50 characters long</string>
</resources>