<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/statsSelectionLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/fillInStats"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fill_in_stats"/>

    <LinearLayout
        android:id="@+id/firstRowStats"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="90dp"
        android:weightSum="50"
        android:paddingVertical="20dp">

        <RelativeLayout
            android:id="@+id/level"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:orientation="vertical">

            <EditText
                android:id="@+id/levelEditText"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:inputType="number"
                android:textColor="@color/black"
                android:maxLength="2"
                android:gravity="center"
                android:background="@drawable/edit_text_background" />

            <TextView
                android:id="@+id/levelDescription"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="Level"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:layout_below="@id/levelEditText"
                android:gravity="center"/>

            <TextView
                android:id="@+id/levelErrorText"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/levelDescription"
                android:text="@string/error_level_text"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="11sp"
                android:gravity="center"
                android:visibility="gone"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ac"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:orientation="vertical">

            <EditText
                android:id="@+id/acEditText"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:inputType="number"
                android:textColor="@color/black"
                android:maxLength="2"
                android:background="@drawable/edit_text_background"/>

            <TextView
                android:id="@+id/acDescription"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="Armour Class"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:layout_below="@id/acEditText"
                android:gravity="center"/>
            <TextView
                android:id="@+id/acErrorText"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/acDescription"
                android:text="@string/error_ac_text"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="11sp"
                android:gravity="center"
                android:visibility="gone"/>
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/secondRowStats"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="90"
        android:paddingHorizontal="30dp"
        android:paddingVertical="20dp">

        <RelativeLayout
            android:id="@+id/strength"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp">

            <EditText
                android:id="@+id/strengthEditText"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:inputType="number"
                android:maxLength="2"
                android:textColor="@color/black"
                android:gravity="center"
                android:background="@drawable/edit_text_background"/>

            <TextView
                android:id="@+id/strengthDescription"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="Strength"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:layout_below="@id/strengthEditText"
                android:gravity="center"/>

            <TextView
                android:id="@+id/strengthErrorText"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/strengthDescription"
                android:text="@string/error_stat_text"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="11sp"
                android:gravity="center"
                android:visibility="gone"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/dexterity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp">

            <EditText
                android:id="@+id/dexterityEditText"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:inputType="number"
                android:maxLength="2"
                android:textColor="@color/black"
                android:gravity="center"
                android:background="@drawable/edit_text_background"/>

            <TextView
                android:id="@+id/dexterityDescription"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="Dexterity"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:layout_below="@id/dexterityEditText"
                android:gravity="center"/>
            <TextView
                android:id="@+id/dexterityErrorText"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/dexterityDescription"
                android:text="@string/error_stat_text"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="11sp"
                android:gravity="center"
                android:visibility="gone"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/constitution"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp">

            <EditText
                android:id="@+id/constitutionEditText"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:inputType="number"
                android:maxLength="2"
                android:textColor="@color/black"
                android:gravity="center"
                android:background="@drawable/edit_text_background"/>

            <TextView
                android:id="@+id/constitutionDescription"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="Constitution"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:layout_below="@id/constitutionEditText"
                android:gravity="center"/>
            <TextView
                android:id="@+id/constitutionErrorText"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/constitutionDescription"
                android:text="@string/error_stat_text"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="11sp"
                android:gravity="center"
                android:visibility="gone"/>
        </RelativeLayout>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/thirdRowStats"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="90"
        android:paddingHorizontal="30dp"
        android:paddingVertical="20dp">

        <RelativeLayout
            android:id="@+id/intelligence"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp">

            <EditText
                android:id="@+id/intelligenceEditText"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:inputType="number"
                android:maxLength="2"
                android:textColor="@color/black"
                android:gravity="center"
                android:background="@drawable/edit_text_background"/>

            <TextView
                android:id="@+id/intelligenceDescription"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="Intelligence"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:layout_below="@id/intelligenceEditText"
                android:gravity="center"/>
            <TextView
                android:id="@+id/intelligenceErrorText"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/intelligenceDescription"
                android:text="@string/error_stat_text"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="11sp"
                android:gravity="center"
                android:visibility="gone"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/wisdom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp">

            <EditText
                android:id="@+id/wisdomEditText"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:inputType="number"
                android:maxLength="2"
                android:textColor="@color/black"
                android:gravity="center"
                android:background="@drawable/edit_text_background"/>

            <TextView
                android:id="@+id/wisdomDescription"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="Wisdom"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:layout_below="@id/wisdomEditText"
                android:gravity="center"/>

            <TextView
                android:id="@+id/wisdomErrorText"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/wisdomDescription"
                android:text="@string/error_stat_text"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="11sp"
                android:gravity="center"
                android:visibility="gone"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/charisma"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp">

            <EditText
                android:id="@+id/charismaEditText"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:inputType="number"
                android:maxLength="2"
                android:textColor="@color/black"
                android:gravity="center"
                android:background="@drawable/edit_text_background"/>

            <TextView
                android:id="@+id/charismaDescription"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="Charisma"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:layout_below="@id/charismaEditText"
                android:gravity="center"/>
            <TextView
                android:id="@+id/charismaErrorText"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/charismaDescription"
                android:text="@string/error_stat_text"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="11sp"
                android:gravity="center"
                android:visibility="gone"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/exitButton"
            android:text="Exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/backButton"
            android:text="Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:id="@+id/nextButton"
            android:src="@android:drawable/ic_media_next"
            android:contentDescription="Next"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"/>
    </LinearLayout>
</LinearLayout>